# chromie

./: .dockerignore  .env  .env.common  .env.example  .env.local.example  .gitignore  AGENTS.md  CHANGELOG.md  CHROMIE_BILINGUAL_SPEAKER_GUIDE.md  CHROMIE_RUNBOOK.md  CLAUDE.md  CONTRIBUTING.md  CONVERSATION_CONTEXT.md  DEVELOPMENT_CHECKPOINT.md  FINAL_RUNTIME_NOTES.md  GITHUB_MERGE_NOTES.md  HARDWARE_PROFILES.md  LLM_CONTEXT.md  MINIMAL_TTS_FIX_NOTES.md  OPTIMIZATION_NOTES.md  PRESET_RTX4090_LAPTOP.txt  README.md  README_APPLY.md  ROADMAP.md  SECURITY.md  SUPPORT.md  VERSION  docker-compose.yml  hf_cache  llm.md  llm_context.md  ollama_data  requirements-test.txt
agent/: .dockerignore  Dockerfile  README.md  compose.snippet.yml  requirements.txt
asr/: Dockerfile  README.md  backends.py  requirements.txt  server.py  transcription.py
capabilities/: README.md  behavior_domains.json  prompt_tiers.json  soridormi.json
commissioning/: README.md  (+2 more)
docs/: ACCEPTANCE.md  (+63 more)
shared/: README.md  pyproject.toml
shared/chromie_contracts/: __init__.py  action.py  agent.py  errors.py  execution_outcome.py  goal.py  interaction.py  mind.py  perception.py  plan.py  reflex.py  response_composition.py  route.py  semantic_authority.py  semantic_task.py  session.py  social_attention.py  task_proposal.py  tool_result.py  user_turn.py
shared/chromie_runtime/: __init__.py  accelerator_telemetry.py  cognitive_integrity_events.py  latency_evidence.py  llm_diagnostics.py  log_colors.py  resource_sampling.py  runtime_events.py  runtime_trace.py  scenario_candidates.py  scheduling.py
(+814 files in other folders)
