[project]
name = "chromie-contracts"
version = "0.1.0"
description = "Shared JSON/Pydantic contracts for Chromie services"
requires-python = ">=3.11"
dependencies = [
  "pydantic==2.13.3",
]

[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["chromie_contracts*", "chromie_runtime*"]
